[gd_scene load_steps=5 format=3 uid="uid://cj6dayrto8j20"]

[ext_resource type="Script" path="res://examples/diablo_like/player/hud/diablo_like_hud.gd" id="1_nh8g3"]
[ext_resource type="PackedScene" uid="uid://bpehn1kexfb5r" path="res://examples/diablo_like/player/hud/skill_tree/skill_tree.tscn" id="2_nebkc"]
[ext_resource type="PackedScene" uid="uid://8yfnbrm2v5yx" path="res://examples/diablo_like/player/hud/inventory/inventory.tscn" id="3_ltaoy"]
[ext_resource type="PackedScene" uid="uid://dgywyht3ft4oa" path="res://examples/diablo_like/player/hud/in_game_bar/in_game_bar.tscn" id="4_6rse1"]

[node name="DiabloLikeHud" type="BoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nh8g3")

[node name="CharacterStuff" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="skill_tree" parent="CharacterStuff" instance=ExtResource("2_nebkc")]
layout_mode = 2

[node name="inventory" parent="CharacterStuff" instance=ExtResource("3_ltaoy")]
layout_mode = 2
size_flags_horizontal = 3

[node name="InGameBar" parent="." instance=ExtResource("4_6rse1")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
